--- a/style.css
+++ b/style.css
@@ -204,7 +204,9 @@ input:focus {
 #cvc {
     width: auto;
 }
-
+input[type="number"] {
+    -moz-appearance: textfield;
+}
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
     -webkit-appearance: none;
